samples/_failures_safe/1761489674_998737_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbd60da3.c: In function ‘main’:
./samples/SAFE/__tmp_cbd60da3.c:165:9: error: expected declaration or statement at end of input
  165 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_cbd60da3.c:165:9: error: expected declaration or statement at end of input
